fixed z-index

--- a/src/components/MainPageComponents/About/About.module.css
+++ b/src/components/MainPageComponents/About/About.module.css
@@ -27,7 +27,7 @@
     display: flex;
     flex-direction: column;
     max-width: 660px;
-    z-index: 50;
+    z-index: 5;
 }
 
 .about__socialLinks {
